Первая сдача проекта (после автотестов)

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <h3 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/HTML&gt</span>
-            <img class="card__image zero_sprint" src="./images/image.png">
+            <span class="label">&lt;/HTML&gt;</span>
+            <img class="card__image zero_sprint" src="./images/image.png" alt="Минивен на фоне ночного неба">
           </div>
           <div class="card__text">
             <p class="card__text-paragraph">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
@@ -51,7 +51,7 @@
         <h3 class="card__title">1 спринт: Я — чистый лист</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/Inspiration&gt</span>
+            <span class="label">&lt;/Inspiration&gt;</span>
             <img class="card__image first_sprint-start" src="./images/bubbles.jpg" alt="Абстракция с размытыми пузырьками">
           </div>
           <div class="card__text">
@@ -79,7 +79,7 @@
         <h3 class="card__title">1 спринт: А если не получится?</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/Ready to go&gt</span>
+            <span class="label">&lt;/Ready to go&gt;</span>
             <img class="card__image first_sprint-end" src="./images/lamp.jpg" alt="Керосиновая лампа">
           </div>
           <div class="card__text">
@@ -107,7 +107,7 @@
         <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/Long voyage&gt</span>
+            <span class="label">&lt;/Long voyage&gt;</span>
             <img class="card__image second_sprint-start" src="./images/ship.jpg" alt="Рисунок кораблей на фоне пирамид">
           </div>
           <div class="card__text">
@@ -135,7 +135,7 @@
         <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/Not alone&gt</span>
+            <span class="label">&lt;/Not alone&gt;</span>
             <img class="card__image second_sprint-end" src="./images/trees.jpg" alt="Деревья в поле">
           </div>
           <div class="card__text">
@@ -163,7 +163,7 @@
         <h3 class="card__title">3 спринт: Обходные стратегии</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/O_O&gt</span>
+            <span class="label">&lt;/O_O&gt;</span>
             <img class="card__image third_sprint-start" src="./images/frog.jpg" alt="Лягушка на листке">
           </div>
           <div class="card__text">
@@ -191,7 +191,7 @@
         <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/So tired&gt</span>
+            <span class="label">&lt;/So tired&gt;</span>
             <img class="card__image third_sprint-end" src="./images/bushes.jpg" alt="Зонтик среди кустов">
           </div>
           <div class="card__text">
@@ -219,7 +219,7 @@
         <h3 class="card__title">«Сейчас я здесь»</h3>
         <article class="card__items">
           <div class="image-wrapper">
-            <span class="label">&lt/Poor thing&gt</span>
+            <span class="label">&lt;/Poor thing&gt;</span>
             <img class="card__image fourth_sprint" src="./images/axe.jpg" alt="Маленький топор на наковальне">
           </div>
           <div class="card__text">
